# nyanpasswd

./: .gitignore  .gitlab-ci.yml  .rustfmt.toml  Cargo.toml  LICENSE  README.md  autoconfig.nix  configuration.nix  createdb.sql  db.sh  flake.nix  nixos-test.nix  style.css  userdb.lua
migrations/: 0001_init.sql  0002_login_allowed.sql  0003_aliases.sql  0004_machine_accounts.sql  0005_mailpasswd_schema.sql
radicale-plugin/: setup.py
radicale-plugin/radicale_mail_passwd_auth/: __init__.py
src/: admin.rs  api.rs  axum.rs  index.html  lib.rs  main.rs
src/admin/: aliases.rs  mod.rs  non_human.rs
templates/: admin.stpl  admin_manage_user.stpl  aliases.stpl  deleted_password.stpl  layout.stpl  main.stpl  new_password.stpl
